# tti_project

./: .gitignore  README.md  compress_reasoning.py  config.py  llama_exp.py  medqa_direct_answer_logprobs.json  medqa_direct_answer_logprobs_test.json  merge_lora.py  model_short_cot_ollama.py  out-tuned.txt  prepare_medqa_en_split.py  prompts.py  pyproject.toml  qwen_2_answer_accuracy.py  qwen_2_answer_test.py  requirements.txt  run_gpu_hyperparam_tuning.slurm  run_gpu_ollama.slurm  run_merge_simple.sh  token_entropy.py  tune_log_diff_threshold.py
confidence_based_reasoning/: analyze-experiment-logs.py  analyze_logdiff_threshold.py  direct_answer.py  eval_test_escalation.py  logistic_regression.py  medqa_calibration_data.json  medqa_direct_answer_logprobs.json  medqa_threshold_grid_search.csv  medqa_val_probe_results.csv  old.py  qwen_2_answer_accuracy.py  qwen_2_answer_accuracy_tuned.py  qwen_2_answer_test.py  threshold_calc.py  tune_log_diff_threshold.py
finetune/: README.md
logs/: errormedqa_hyperparam_tuning-44895407.out  medqa_hyperparam_tuning-44895407.out  out-test.txt
med_qa_json/: test.json  validation.json
pipeline/: pipeline.py  pipeline_config.py
think_on_disagreement_hyperparam/: hyperparam_tuning.sbatch  tod_hyperparam_tuning.py
token_entropy/: inspect_answers.py  long_reasoning_results.json  run_token_entropy.sh  run_tuning.sh  short_reasoning_results.json  token_entropy.py  tune_threshold.py
val_set_output_scripts/: direct_answer_script.py  long_reason_script.py  short_reason_script.py
val_set_outputs/: direct_answers_validation.json
(+22 files in other folders)
